Fixed safari select misaligned + options

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,10 @@
   );
 }
 
+.safari-text-center {
+  text-align-last: center;
+}
+
 .shadow:before,
 .shadow:after {
   content: "";
